--- a/styles.css
+++ b/styles.css
@@ -2153,21 +2153,21 @@ body, html, #category, #category1, #category2, #bookTitles, #movies, #songs, #fa
         padding-top: 3px;
     }
     #results{
-        margin-top: 5px;
-        height: 70px;
         visibility: hidden;
-        line-height: 70px;
+				margin-top: 10px;
+				margin-bottom: 10px;
     }
     #again, #home, #home1{
         display: none;
-        width: 50%;
-        height: 65px;
-        margin: 0px auto 20px auto;
+        width: 20%;
+        height: 40px;
+        margin: 0px auto 0px auto;
         font-size: 35px;
-        line-height: 65px;
+				font-weight: 600;
+				font-family: Raleway, Helvetica, sans-serif;
         text-align: center;
         color: white;
-        background-color: #00006c;
+        background-color: #DCDCDC;
         border-radius: 25px;
         cursor: pointer;
     }
@@ -2187,10 +2187,24 @@ body, html, #category, #category1, #category2, #bookTitles, #movies, #songs, #fa
 
   	}
 
+		#guessesIncorrect {
+			font-size: 35px;
+			font-weight: 600;
+			color: white;
+
+		}
+
 	#a, #b, #c, #d, #e, #f, #g, #h, #i, #j, #k, #l, #m, #n, #o, #p, #q, #r, #s, #t, #u, #v, #w, #x, #y, #z {
 		visibility: hidden;
 	}
 
+	.guesses {
+		margin-top: 5px;
+		margin-bottom: 5px;
+		font-weight: 700;
+		font-size: 18px;
+
+	}
 
 
 @media (max-width: 866px){
@@ -2310,23 +2324,24 @@ body, html, #category, #category1, #category2, #bookTitles, #movies, #songs, #fa
             padding-bottom: 3px;
         }
         #results{
-            margin-top: 5px;
-            height: 50px;
             visibility: hidden;
-            line-height: 70px;
+            line-height: 25px;
+						margin-top: 10px;
+						margin-bottom: 10px;
         }
         #again, #home, #home1{
-            display: none;
-            width: 50%;
-            height: 65px;
-            margin: 20px auto 20px auto;
-            font-size: 35px;
-            line-height: 65px;
-            text-align: center;
-            color: white;
-            background-color: #00006c;
-            border-radius: 25px;
-            cursor: pointer;
+        		display: none;
+						width: 20%;
+						height: 80px;
+						margin: 0px auto 0px auto;
+						font-size: 35px;
+						font-weight: 600;
+						font-family: Raleway, Helvetica, sans-serif;
+						text-align: center;
+						color: white;
+						background-color: #DCDCDC;
+						border-radius: 25px;
+						cursor: pointer;
         }
         #home{
             margin-top: 0px;
@@ -2335,6 +2350,12 @@ body, html, #category, #category1, #category2, #bookTitles, #movies, #songs, #fa
     #challengeGame{
         text-align: center;
     }
+		#guessesIncorrect {
+			font-size: 35px;
+			font-weight: 600;
+			color: white;
+
+		}
 
 }
 
@@ -2437,17 +2458,21 @@ body, html, #category, #category1, #category2, #bookTitles, #movies, #songs, #fa
             padding-top: 0px;
             padding-bottom: 3px;
         }
-        #results{
-            margin-top: 5px;
-            height: 40px;
-        }
-        #again, #home, #home1{
-            width: 250px;
-            height: 45px;
+
+
+        #again, #home{
+            width: 80px;
+            height: 25px;
             margin: 10px auto;
-            font-size: 26px;
+            font-size: 24px;
             line-height: 45px;
         }
+				#guessesIncorrect {
+					font-size: 35px;
+					font-weight: 600;
+					color: white;
+
+				}
 
 
 }
